--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <!-- Fonts -->
          <!-- font awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
           <!-- google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:700,400,100,300' rel='stylesheet' type='text/css'>
 
