--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
          <!-- font awesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
           <!-- google fonts -->
-    <!-- IM FELL ENGLISH (for titles) -->
-    <link href='https://fonts.googleapis.com/css?family=IM+Fell+English' rel='stylesheet' type='text/css'>
+    <!-- IM FELL ENGLISH (for titles) / ARIMO (for content) -->
+    <link href='https://fonts.googleapis.com/css?family=IM+Fell+English|Arimo:400,700' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
