--- a/index.html
+++ b/index.html
@@ -34,6 +34,43 @@
 
 <body>
     
+    <!-- NAVBAR START -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+        </div>
+
+        <!-- Collect the nav links for toggling -->
+        <div class="collapse navbar-collapse navbar-right" id="example-navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="#">about</a>
+                </li>
+                <li>
+                    <a href="#">menu features</a>
+                </li>
+                <li>
+                    <a href="#">music events</a>
+                </li>
+                <li>
+                    <a href="#">operation hours</a>
+                </li>
+                <li>
+                    <a href="#">contact</a>
+                </li>
+            </ul> 
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container -->
+</nav>
+    <!-- NAVBAR END -->
+    
 
      <!-- JQuery Link -->
     <script src="js/jquery-1.11.3.min.js"></script>
