--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- My Styles -->
-    <link href="css/my-style.css" rel="stylesheet">
+    <link href="css/my-styles.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,7 +44,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#landing">
+                <img alt="brand" src="img/graffiti-logo%20copy.jpg"/>
+            </a>
         </div>
 
         <!-- Collect the nav links for toggling -->
@@ -60,7 +62,7 @@
                     <a href="#">music events</a>
                 </li>
                 <li>
-                    <a href="#">operation hours</a>
+                    <a href="#">hours of operation</a>
                 </li>
                 <li>
                     <a href="#">contact</a>
