--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
 </nav>
     <!-- NAVBAR END -->
     
+    <!-- LANDING START -->
+    <section id="landing" class="container-fluid">
+        <div class="row">
+            <h1>hi</h1>
+        </div>
+    </section>
+    
 
      <!-- JQuery Link -->
     <script src="js/jquery-1.11.3.min.js"></script>
