--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
  
-    <title><!-- write title here --></title>
+    <title>neWorlDeli</title>
 
     <!-- Animate Css -->
     <link rel="stylesheet" href="css/animate.css">
@@ -76,6 +76,7 @@
     <!-- LANDING START -->
     <section id="landing" class="container-fluid">
         <div class="row">
+            <h1>Where Bland Is Banned</h1>
         </div>
     </section>
     
