--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- My Styles -->
     <link href="css/my-styles.css" rel="stylesheet">
+    <link href="css/xs-styles.css" rel="stylesheet" media="(max-width: 700px)"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -76,8 +77,8 @@
     <!-- LANDING START -->
     <section id="landing" class="container-fluid full-screen-intro">
         <div class="row">
-            <img class="bg" src="img/open.jpg">
-            <img class="bg visible-xs" src="img/establishment.jpg">
+            <img class="bg" src="img/meal-843230_1920.jpg">
+            <!-- <img class="bg visible-xs" src="img/establishment.jpg"> -->
             <div class="col-md-12">
                 <h1>Where Bland Is Banned</h1>
             <button>visit us</button>
