--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- My Styles -->
     <link href="css/my-styles.css" rel="stylesheet">
     <link href="css/xs-styles.css" rel="stylesheet" media="(max-width: 667px)"/>
+    <link href="css/sm-styles.css" rel="stylesheet" media="(min-width: 768px) and (max-width: 1024px)"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -78,6 +79,7 @@
     <section id="landing" class="container-fluid full-screen-intro">
         <div class="row">
             <img class="bg" src="img/meal-843230_1920.jpg">
+            <img class="bg visible-sm" src="img/meal-sm.jpg"
             <!-- <img class="bg visible-xs" src="img/establishment.jpg"> -->
             <div class="col-md-12">
                 <h1>Where Bland Is Banned</h1>
@@ -86,6 +88,7 @@
             
         </div>
     </section>
+    <!-- LANDING END -->
     
 
      <!-- JQuery Link -->
