--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
     <!-- LANDING START -->
     <section id="landing" class="container-fluid full-screen-intro">
         <div class="row">
-            <img class="bg" src="img/meal-843230_1920.jpg">
-            <img class="bg visible-sm" src="img/meal-sm.jpg"/>
-            <img class="bg visible-xs" src="img/meal-xs.jpg"/>
-            <div class="col-md-12">
+            <img class="bg" src="img/landing-maybe.jpg">
+            <!-- <img class="bg visible-sm" src="img/meal-sm.jpg"/>
+            <img class="bg visible-xs" src="img/meal-xs.jpg"/> -->
+            <div class="col-md-12"> 
                 <h1>Where Bland Is Banned</h1>
             <button>visit us</button>
             </div>
