--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- My Styles -->
     <link href="css/my-styles.css" rel="stylesheet">
+    <link href="css/xs-styles.css" rel="stylesheet" media="(max-width: 768px)"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
