--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
              <div class="row text-right">
                 <h1>Where Bland Is Banned</h1>
-                 <p>serving breafast, lunch and dinner</p>
+                 <p>serving breakfast, lunch and dinner</p>
                 <button>visit us</button>
             </div>
         </div>
