--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
     <section id="about" class="container-fluid">
         <div class="container">
             <div class="row">
-                <figure id="owners" class="col-sm-4">
+                <figure id="owners" class="col-sm-4 col-xs-12">
                     <img src="img/owners.jpg" alt="Owners Greg and Sarah Bontempo"/>
                     <figcaption>Greg and Sarah Bontempo</figcaption>
                 </figure>
-                <article class="col-sm-8">
+                <article class="col-sm-8 col-xs-12">
                     <p>New World Deli came into existence because owners Greg and Sarah Bontempo wanted to create a restaurant where their young children could come to work with them and they would not have to rely on day care.</p>
 
 <p>When you enter NeWorlDeli you are greeted by the aromas of simmering sauces, homemade soups, and roasting meats wafting from the kitchen. This casual Hyde Park cafe caters to those who crave an old-fashioned sandwich piled high with fresh deli meat, cheese and all the trimmings.</p>
