--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         </div>
 
         <!-- Collect the nav links for toggling -->
-        <div class="collapse navbar-collapse navbar-right" id="example-navbar-collapse">
+        <div class="collapse navbar-collapse navbar-right
+" id="example-navbar-collapse">
             <ul class="nav navbar-nav">
                 <li>
                     <a href="#about-link">about</a>
@@ -75,8 +76,8 @@
     <!-- NAVBAR END -->
     
     <!-- INFO START -->
-    <section id="info" class="container">
-        <div class="row text-right hidden-xs">
+    <section id="info" class="container hidden-xs">
+        <div class="row text-right">
             <p>4101 Guadalupe, Austin, TX</p>
             <i class="fa fa-circle"></i>
             <p>512.451.7170</p>
