Menu Section done md
- completed menu section for larger screens

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="row">
                 <article id="reuben" class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                     <img class="img-responsive" src="img/Classic-Reuben-Sandwich.jpg" alt="Classic Reuben Sandwich"/>
-                    <h3>Grilled Sandwiched</h3>
+                    <h3>Grilled / Cold Sandwiches</h3>
                 </article>
                 <article id="turkey" class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                     <img class="img-responsive" src="img/gf-turkey-sandwich.jpg" alt="Gluten Free Turkey Snadwich"/>
