--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
         <div class="row text-right">
             <ul class="list-inline">
                 <li>
-                    <a href="#">
+                    <a href="https://www.facebook.com/NeWorlDeli/timeline">
                         <i class="fa fa-facebook"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://instagram.com/neworldeli/">
                         <i class="fa fa-instagram"></i>
                     </a>
                 </li>
@@ -148,21 +148,23 @@
         <div class="container">
             <div class="row">
                 <h2>Home of the Best Reuben Sandwich in Austin</h2>
+                <p>This casual Hyde Park cafe caters to those who crave an old-fashioned sandwich piled high with fresh deli meat, cheese and all the trimmings.</p> 
+                <p id="selection">We offer an excellent selection with a little something for everyone to enjoy</p>
             </div>
-            <div class="row">
-                <article id="reuben" class="menu col-md-3 col-sm-6 col-xs-12 text-center">
+            <div id="food" class="row">
+                <article class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                     <img class="img-responsive" src="img/Classic-Reuben-Sandwich.jpg" alt="Classic Reuben Sandwich"/>
                     <h3>Grilled / Cold Sandwiches</h3>
                 </article>
-                <article id="turkey" class="menu col-md-3 col-sm-6 col-xs-12 text-center">
+                <article class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                     <img class="img-responsive" src="img/gf-turkey-sandwich.jpg" alt="Gluten Free Turkey Snadwich"/>
-                    <h3>Gluten Free Sandwiches</h3>
+                    <h3>Gluten Free Options</h3>
                 </article>
-                <article id="drinks" class="menu col-md-3 col-sm-6 col-xs-12 text-center">
+                <article class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                     <img class="img-responsive" src="img/local-beer.jpg" alt="Local Austin Beer"/>
-                    <h3>Local Beers</h3>
+                    <h3>Full Bar</h3>
                 </article>
-                <article id="coffee" class="menu col-md-3 col-sm-6 col-xs-12 text-center">
+                <article class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                     <img class="img-responsive" src="img/coffee%20(1).jpg" alt="Coffee"/>
                     <h3>Coffee and Tea</h3>
                 </article>
