Checking on Ipad

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- LANDING START -->
     <section id="landing" class="container-fluid">
         <div class="container">
-             <div class="row text-right">
+             <div class="text-right">
                 <h1>Where Bland Is Banned</h1>
                  <p>serving breakfast, lunch and dinner</p>
                 <button>visit us</button>
