trial sm media query on iPad

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- My Styles -->
-    <link href="css/my-styles.css" rel="stylesheet">
-    <link href="css/xs-styles.css" rel="stylesheet"/>
+    <link href="css/my-styles.css" rel="stylesheet" type="text/css"/>
+    <link href="css/xs-styles.css" rel="stylesheet" type="text/css"/>
+    <link href="css/sm-styles.css" rel="stylesheet" type="text/css"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,7 +37,7 @@
 <body>
     
     <!-- NAVBAR START -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav id="navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#example-navbar-collapse">
@@ -97,7 +98,7 @@
     <!-- LANDING START -->
     <section id="landing" class="container-fluid">
         <div class="container">
-             <div class="text-right">
+             <div class="row text-right">
                 <h1>Where Bland Is Banned</h1>
                  <p>serving breakfast, lunch and dinner</p>
                 <button>visit us</button>
