--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     
                 </article>
                 <article class="col-md-6 col-sm-12 col-xs-12 text-center">
-                    <h2>Musical Diversity</h2>
+                    <h2>Music Shows</h2>
                     <img class="img-responsive" src="img/music.jpg" alt=""/>
                     <div id="wed-sat">
                     <h4>Wednesday - Saturday</h4>
