minor menu detail

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <a href="http://neworldeli.com/menus.html"><span id="plus">EXPLORE OUR <br> SALADS MENU </span></a>
                         </div>
                     </div>
-                    <h3>Gluten Free Options</h3>
+                    <h3>Soups and Salads</h3>
                 </article>
                 <article class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                         <div id="local">
