visit section maps

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <article class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                     <div id="reuben">
                         <div class="overlay text-center">
-                            <a href="http://neworldeli.com/menus.html"><span id="plus">EXPLORE OUR <br> SANDWICHES MENU</span></a>
+                            <a href="http://neworldeli.com/menus.html"><span id="plus">EXPLORE OUR <br> SANDWICH MENU</span></a>
                         </div>
                     </div>
                     <h3>Grilled / Cold Sandwiches</h3>
@@ -171,7 +171,7 @@
                 <article class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                     <div id="salad">
                         <div class="overlay text-center">
-                            <a href="http://neworldeli.com/menus.html"><span id="plus">EXPLORE OUR <br> SALADS MENU </span></a>
+                            <a href="http://neworldeli.com/menus.html"><span id="plus">EXPLORE OUR <br> SALAD MENU </span></a>
                         </div>
                     </div>
                     <h3>Soups and Salads</h3>
@@ -179,7 +179,7 @@
                 <article class="menu col-md-3 col-sm-6 col-xs-12 text-center">
                     <div id="local">
                         <div class="overlay text-center">
-                            <a href="http://neworldeli.com/menus.html"><span id="plus">EXPLORE OUR <br> DRINKS MENU</span></a>
+                            <a href="http://neworldeli.com/menus.html"><span id="plus">EXPLORE OUR <br> DRINK MENU</span></a>
                         </div>
                     </div>
                     <h3>Full Bar</h3>
@@ -250,44 +250,68 @@
     <section id="visit" class="container-fluid">
         <div class="container">
             <div class="row">
-                <!-- CONTACTS START -->
-                <article id="contacts" class="col-sm-6">
+                <!-- DELI START -->
+                <article id="deli" class="col-sm-6 col-xs-12">
                     <h1>neWorlDeli</h1>
+                     <h4>CONTACT AND LOCATION</h4> 
+                       <p>4101 GUADALUPE ST
+                           <br>AUSTIN, TEXAS</p>
+                    <p>512.451.3463</p>
+                    <!---------- deli hours of operations ---------->
                     <h4>HOURS OF OPERATION</h4>
                     <div class="row">
-                        <div class="col-sm-6">
-                            <P>monday - saturday</P>
+                        <div class="hours col-sm-6 col-xs-12">
+                            <p>monday - saturday</p>
                             <p>11:00am - 9:00pm</p>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="hours col-sm-6 col-xs-12">
                             <p>sunday</p>
                             <p>11:00am - 5:00pm</p>
                         </div>
                     </div>
+                    <!---------------------------------------------->
+                    
+                    <!---------- deli embeded google map ---------->
+                    <div class="map hidden-xs">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3444.565424026912!2d-97.73764758487872!3d30.30643098178781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644ca7b8d412cd7%3A0x57d428165501444e!2s4101+Guadalupe+St%2C+Austin%2C+TX+78751!5e0!3m2!1sen!2sus!4v1447388957062" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                    <!--------------------------------------------->
+                   
 
                 </article>
-                <!-- CONTACTS END -->
+                <!-- DELI END -->
 
-                <!-- LOCATIONS START -->
-                <article id="locations" class="col-sm-6">
+                <!-- CAFE START -->
+                <article id="cafe" class="col-sm-6 col-xs-12">
                     <h1>neWorld Cafe</h1>
+                     <h4>CONTACT AND LOCATION</h4> 
+                       <p>3742 FAR WEST BLVD, STE 101
+                        <br>AUSTIN, TEXAS</p>
+                    <p>512.340.1404</p>
+                    <!---------- hours of operation ---------->
                     <h4>HOURS OF OPERATION</h4>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="hours col-sm-4 col-xs-12">
                             <P>monday - friday</P>
                             <p>11:00am - 9:00pm</p>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="hours col-sm-4 col-xs-6">
                             <p>saturday</p>
                             <p>11:00am - 3:00pm</p>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="hours col-sm-4 col-xs-6">
                             <p>sunday</p>
                             <p>closed</p>
                         </div>
                     </div>
+                    <!---------------------------------------->
+                                     <!---------- deli embeded google map ---------->
+                    <div class="map hidden-xs">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d27542.511326987234!2d-97.758036!3d30.356238000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644cb174ca348d5%3A0xf6b747029025de4c!2s3742+Far+West+Blvd+%23101%2C+Austin%2C+TX+78731!5e0!3m2!1sen!2sus!4v1447389513003" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                    <!--------------------------------------------->
                 </article>
-                    <!-- LOCATIONS END -->
+                    <!-- CAFE END -->
             </div>
         </div>
 
