--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
                         <a href="#events-link">music events</a>
                     </li>
                     <li>
-                        <a href="#contacts-link">contacts</a>
-                    </li>
-                    <li>
-                        <a href="#contacts-link">locations</a>
+                        <a href="#contacts-link">contacts & locations</a>
                     </li>
                 </ul>
             </div>
