Visit Title Change

--- a/index.html
+++ b/index.html
@@ -243,12 +243,13 @@
     <!----------------------------->
 
     <!-- CONTACTS AND LOCATIONS START -->
+    <!--creating a wrapping div for both contacts and locations, encompassing both info yet keeping them 2 different sections -->
     <section id="visit" class="container-fluid">
         <div class="container">
             <div class="row">
                 <!-- DELI START -->
                 <article id="deli" class="col-sm-6 col-xs-12">
-                    <h1>neWorlDeli</h1>
+                    <h1>NE<span>W</span>ORL<span>D</span>ELI</h1>
                      <h4>CONTACT AND LOCATION</h4> 
                        <p>4101 GUADALUPE ST
                            <br>AUSTIN, TEXAS</p>
@@ -279,7 +280,7 @@
 
                 <!-- CAFE START -->
                 <article id="cafe" class="col-sm-6 col-xs-12">
-                    <h1>neWorld Cafe</h1>
+                    <h1>NE<span>W</span>ORLD CAFE</h1>
                      <h4>CONTACT AND LOCATION</h4> 
                        <p>3742 FAR WEST BLVD, STE 101
                         <br>AUSTIN, TEXAS</p>
