--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <!---------- social links ---------->
     <article id="connect" class="container">
         <div class="row">
-            <div class="col-xs-1 col-xs- fa-div col-md-offset-10 hidden-xs">
+            <div class="col-xs-1 col-xs- fa-div col-sm-offset-9 col-md-offset-10 hidden-xs">
                 <a href="https://www.facebook.com/NeWorlDeli/timeline">
                     <i class="fa fa-facebook-square fa-3x"></i>
                 </a>
