--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 " id="example-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#about-link">about</a>
+                        <a href="#about-link" class="smoothScroll">about</a>
                     </li>
                     <li>
-                        <a href="#menu-link">menu features</a>
+                        <a href="#menu-link" class="smoothScroll">menu features</a>
                     </li>
                     <li>
-                        <a href="#events-link">music events</a>
+                        <a href="#events-link" class="smoothScroll">music events</a>
                     </li>
                     <li>
-                        <a href="#contacts-link">contacts & locations</a>
+                        <a href="#contacts-link" class="smoothScroll">contacts & locations</a>
                     </li>
                 </ul>
             </div>
@@ -105,7 +105,7 @@
             <div class="row text-right">
                 <h1>Where Bland Is Banned</h1>
                 <p>serving breakfast, lunch and dinner</p>
-                <a href="#contacts-link">visit us</a>
+                <a href="#contacts-link" class="smoothScroll">visit us</a>
             </div>
 
         </div>
@@ -356,6 +356,7 @@
     <!-- Javascript Link -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/my-animation-scroll.js"></script>
+    <script type="text/javascript" src="js/smoothscroll.js"></script>
 </body>
 
 </html>
