social nag update

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#landing">
+                <a class="navbar-brand smoothScroll" href="#landing">
                     <img alt="brand" src="img/graffiti-logo%20copy.jpg" />
                 </a>
             </div>
@@ -280,7 +280,7 @@
             <div class="row">
                 <!-- DELI START -->
                 <article id="deli" class="col-sm-6 col-xs-12">
-                    <h1>NE<span>W</span>ORL<span>D</span>ELI</h1>
+                    <h1>NE<span>W</span>ORL<span>DELI</span></h1>
                     <h4>CONTACT AND LOCATION</h4>
                     <p>4101 GUADALUPE ST
                         <br>AUSTIN, TEXAS</p>
@@ -310,7 +310,7 @@
 
                 <!-- CAFE START -->
                 <article id="cafe" class="col-sm-6 col-xs-12">
-                    <h1>NE<span>W</span>ORLD CAFE</h1>
+                    <h1>NE<span>W</span>ORLD <span>CAFE</span></h1>
                     <h4>CONTACT AND LOCATION</h4>
                     <p>3742 FAR WEST BLVD, STE 101
                         <br>AUSTIN, TEXAS</p>
